Fix image source filename and update calculation

--- a/prototype.html
+++ b/prototype.html
@@ -288,7 +288,7 @@
       <div class="topbar">
         <div class="brand">
           <div class="logo" id="logoBox">
-            <img src="athletechlogo.png" alt="AthleTech Logo" onerror="this.style.display='none';this.parentElement.textContent='AT';" />
+            <img src="athletechLogo.png" alt="AthleTech Logo" onerror="this.style.display='none';this.parentElement.textContent='AT';" />
           </div>
           <div>
             <h1>AthleTech Prototype</h1>
