--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="nav-content">
       <a href="#top" class="nav-logo">
         <div class="nav-logo-img">
-          <img src="athletechLogo.png" alt="AthleTech Logo" onerror="this.style.display='none';" />
+          <img src="athletechlogo.png" alt="AthleTech Logo" onerror="this.style.display='none';" />
         </div>
         AthleTech
       </a>
@@ -318,7 +318,7 @@
   <section id="top" class="hero">
     <div class="hero-content">
       <div class="logo">
-        <img src="athletechLogo.png" alt="AthleTech Logo" style="width:100%;height:100%;object-fit:cover;" onerror="this.style.display='none';this.parentElement.textContent='AT';" />
+        <img src="athletechlogo.png" alt="AthleTech Logo" style="width:100%;height:100%;object-fit:cover;" onerror="this.style.display='none';this.parentElement.textContent='AT';" />
       </div>
       <h1>AthleTech</h1>
       <p class="tagline">AI-Powered Athletic Coaching for the Next Generation<br>Real-time motion tracking, personalized training, and injury prevention</p>
@@ -376,7 +376,7 @@
         Experience AthleTech in action. Generate a training plan, run the motion simulator, and see how our AI evaluates form and safety in real-time.
       </p>
       <div style="width:100%;background:#1a1a1a;border:2px solid #4a2c70;border-radius:20px;padding:20px;box-shadow:0 30px 60px rgba(0,0,0,0.5);margin-top:40px;">
-        <iframe src="prototype.html" style="width:100%;height:750px;border:none;border-radius:12px;background:#0a0a0a;display:block"></iframe>
+        <iframe src="index.html" style="width:100%;height:1200px;border:none;border-radius:12px;background:#0a0a0a;display:block"></iframe>
       </div>
     </div>
   </section>
