Fix image filename case in index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="nav-content">
       <a href="#top" class="nav-logo">
         <div class="nav-logo-img">
-          <img src="athletechlogo.png" alt="AthleTech Logo" onerror="this.style.display='none';" />
+          <img src="athletechLogo.png" alt="AthleTech Logo" onerror="this.style.display='none';" />
         </div>
         AthleTech
       </a>
@@ -318,7 +318,7 @@
   <section id="top" class="hero">
     <div class="hero-content">
       <div class="logo">
-        <img src="athletechlogo.png" alt="AthleTech Logo" style="width:100%;height:100%;object-fit:cover;" onerror="this.style.display='none';this.parentElement.textContent='AT';" />
+        <img src="athletechLogo.png" alt="AthleTech Logo" style="width:100%;height:100%;object-fit:cover;" onerror="this.style.display='none';this.parentElement.textContent='AT';" />
       </div>
       <h1>AthleTech</h1>
       <p class="tagline">AI-Powered Athletic Coaching for the Next Generation<br>Real-time motion tracking, personalized training, and injury prevention</p>
